--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -1,3 +1,16 @@
-{{ object.title }}
-{{ object.text }}
-{{ object.category }}
+{% extends 'base.html' %}
+
+{% block title %}
+  詳細
+{% endblock %}
+
+{% block content %}
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-header">{{ object.title }}</h5>
+      <h6 class="card-title">カテゴリー: {{ object.category }}</h6>
+      <p class="card-text">{{ object.text }}</p>
+      <a href="#" class="btn btn-primary">ボタン</a>
+    </div>
+  </div>
+{% endblock %}
