--- a/book/templates/book/book_list.html
+++ b/book/templates/book/book_list.html
@@ -1,24 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+{% extends 'base.html' %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+{% block title %}
+  一覧
+{% endblock %}
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    {% for item in object_list %}
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">{{ item.title }}</h5>
-          <p class="card-text">{{ item.text }}</p>
-          <a href="#" class="btn btn-primary">{{ item.category }}</a>
-        </div>
+{% block content %}
+  {% for item in object_list %}
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">{{ item.title }}</h5>
+        <p class="card-text">{{ item.text }}</p>
+        <a href="#" class="btn btn-primary">{{ item.category }}</a>
       </div>
-    {% endfor %}
-  </body>
-</html>
+    </div>
+  {% endfor %}
+{% endblock %}
