--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -10,7 +10,9 @@
       <h5 class="card-header">{{ object.title }}</h5>
       <h6 class="card-title">カテゴリー: {{ object.category }}</h6>
       <p class="card-text">{{ object.text }}</p>
-      <a href="#" class="btn btn-primary">ボタン</a>
+      <a href="{% url 'list-book' %}" class="btn btn-primary">一覧</a>
+      <a href="{% url 'update-book' object.pk %}" class="btn btn-primary">編集</a>
+      <a href="{% url 'delete-book' object.pk %}" class="btn btn-primary">削除</a>
     </div>
   </div>
 {% endblock %}
