--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -1,18 +1,19 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  詳細
+  書籍詳細
+{% endblock %}
+{% block h1 %}
+  書籍情報
 {% endblock %}
 
 {% block content %}
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-header">{{ object.title }}</h5>
-      <h6 class="card-title">カテゴリー: {{ object.category }}</h6>
-      <p class="card-text">{{ object.text }}</p>
-      <a href="{% url 'list-book' %}" class="btn btn-primary">一覧</a>
-      <a href="{% url 'update-book' object.pk %}" class="btn btn-primary">編集</a>
-      <a href="{% url 'delete-book' object.pk %}" class="btn btn-primary">削除</a>
-    </div>
+  <div class="p-4 m-4 bg-light border border-success rounded">
+    <h2 class="text-success">{{ object.title }}</h2>
+    <p>{{ object.text }}</p>
+    <h6 class="card-title">カテゴリー: {{ object.category }}</h6>
+    <a href="{% url 'list-book' %}" class="btn btn-primary">一覧</a>
+    <a href="{% url 'update-book' object.pk %}" class="btn btn-primary">編集</a>
+    <a href="{% url 'delete-book' object.pk %}" class="btn btn-primary">削除</a>
   </div>
 {% endblock %}
