--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,13 @@
         <a class="nav-link mx-3" href="{% url 'list-book' %}">一覧</a>
         <a class="nav-link mx-3" href="{% url 'create-book' %}">登録</a>
       </div>
+      <div class="navbar d-flex flex-row">
+        {% if request.user.is_authenticated %}
+          <a class="nav-link mx-3" href="{% url 'logout' %}">ログアウト</a>
+        {% else %}
+          <a class="nav-link mx-3" href="{% url 'login' %}">ログイン</a>
+        {% endif %}
+      </div>
     </nav>
     <h1>
       {% block h1 %}
