--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,9 @@
       </div>
       <div class="navbar d-flex flex-row">
         {% if request.user.is_authenticated %}
-          <a class="nav-link mx-3" href="{% url 'logout' %}">ログアウト</a>
+          <a class="nav-link mx-3" href="{% url 'accounts:logout' %}">ログアウト</a>
         {% else %}
-          <a class="nav-link mx-3" href="{% url 'login' %}">ログイン</a>
+          <a class="nav-link mx-3" href="{% url 'accounts:login' %}">ログイン</a>
         {% endif %}
       </div>
     </nav>
